added PluginCoordinate, plugin input selection progress

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -82,7 +82,9 @@ Report:
     browser:
       directory: ./
       filter: ""
-    selected: []
+    selection:
+      dataType: tech.kzen.auto.server.objects.report.pipeline.input.model.FlatDataRecord
+      locations: []
   formula: {}
   filter: {}
   pivot:
@@ -104,13 +106,13 @@ Report:
 
 InputSpec:
   abstract: true
-  class: tech.kzen.auto.common.objects.document.report.spec.InputSpec
+  class: tech.kzen.auto.common.objects.document.report.spec.input.InputSpec
   meta:
     ref:
       by: InputSpecDefiner
 
 InputSpecDefiner:
-  class: tech.kzen.auto.common.objects.document.report.spec.InputSpec$Definer
+  class: tech.kzen.auto.common.objects.document.report.spec.input.InputSpec$Definer
 
 
 FormulaSpec:
