report failure handling, fix ReportWorkPool deleteDir silent failure, refactor

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -83,7 +83,7 @@ Report:
       directory: ./
       filter: ""
     selection:
-      dataType: tech.kzen.auto.server.objects.report.pipeline.input.model.FlatDataRecord
+      dataType: tech.kzen.auto.server.objects.report.pipeline.input.model.FlatFileRecord
       locations: []
   formula: {}
   filter: {}
