dependency update, input selection Group By progress

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -84,6 +84,7 @@ Report:
       filter: ""
     selection:
       dataType: tech.kzen.auto.server.objects.report.pipeline.input.model.FlatFileRecord
+      groupBy: ""
       locations: []
   formula: {}
   filter: {}
