--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -83,7 +83,7 @@ Report:
       directory: ./
       filter: ""
     selection:
-      dataType: tech.kzen.auto.server.objects.report.pipeline.input.model.FlatFileRecord
+      dataType: tech.kzen.auto.plugin.model.record.FlatFileRecord
       groupBy: ""
       locations: []
   formula: {}
