--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -188,6 +188,56 @@ OutputSpecDefiner:
 
 ################################################################
 
+Pipeline:
+  abstract: true
+  is: Document
+  class: tech.kzen.auto.server.objects.pipeline.PipelineDocument
+  title: "Pipeline"
+  icon: TableChart
+#  input:
+#    browser:
+#      directory: ./
+#      filter: ""
+#    selection:
+#      dataType: tech.kzen.auto.plugin.model.record.FlatFileRecord
+#      groupBy: ""
+#      locations: []
+#  formula: {}
+#  previewAll: false
+#  filter: {}
+#  previewFiltered: false
+#  analysis:
+#    type: FlatData
+#    flat:
+#      type: RequireAny
+#      values: []
+#    pivot:
+#      rows: []
+#      values: {}
+#  output:
+#    type: Explore
+#    explore:
+#      work: "report" # NB: referenced in OutputSpec
+#      save: ""
+#      start: 1
+#      count: 50
+#    export:
+#      format: csv
+#      compression: none
+#      path: "../work/export/${report}_${group}_${time}.${extension}"
+  meta:
+#    input: InputSpec
+#    formula: FormulaSpec
+#    previewAll: PreviewSpec
+#    filter: FilterSpec
+#    previewFiltered: PreviewSpec
+#    analysis: AnalysisSpec
+#    output: OutputSpec
+    selfLocation: SelfLocation
+
+
+################################################################
+
 
 Plugin:
   abstract: true
