Run progress end-to-end

--- a/kzen-auto-jvm/src/main/resources/notation/auto-jvm/feature/feature-jvm.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-jvm/feature/feature-jvm.yaml
@@ -1,9 +1,10 @@
 
-
+# NB: referenced in FeatureDocument
 ScreenshotTaker:
   class: tech.kzen.auto.server.objects.feature.ScreenshotTaker
 
 
+# NB: referenced in FeatureDocument
 ScreenshotCropper:
   class: tech.kzen.auto.server.objects.feature.ScreenshotCropper
 
