--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
@@ -7,14 +7,15 @@ ScriptController:
   archetype: Script
   stepController: StepController
   scriptCommander: ScriptCommander
+  ribbonController: RibbonController
 
 
-#SequenceController:
-#  is: DocumentController
-#  class: tech.kzen.auto.client.objects.document.sequence.SequenceController$Wrapper
-#  archetype: Sequence
-##  stepController: StepController
-##  scriptCommander: ScriptCommander
+SequenceController:
+  is: DocumentController
+  class: tech.kzen.auto.client.objects.document.sequence.SequenceController$Wrapper
+  archetype: Sequence
+#  stepController: StepController
+#  scriptCommander: ScriptCommander
 
 
 ################################################################
