sequence: display steps, run button, added ui state. added javaVersion

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -39,18 +39,19 @@ Sequence:
     steps:
       is: List
       of: SequenceStep
+      by: Nominal
 
 
 SequenceStep:
   abstract: true
   class: tech.kzen.auto.server.objects.sequence.api.SequenceStep
   description: "Run step"
-#  display: DefaultStepDisplay
+  display: SequenceStepDisplayDefault
   meta:
     icon: String
     title: String
     description: String
-#    display: String
+    display: String
 
 
 ################################################################
