--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
@@ -14,8 +14,9 @@ SequenceController:
   is: DocumentController
   class: tech.kzen.auto.client.objects.document.sequence.SequenceController$Wrapper
   archetype: Sequence
-#  stepController: StepController
+  stepController: SequenceStepController
 #  scriptCommander: ScriptCommander
+  ribbonController: RibbonController
 
 
 ################################################################
@@ -83,6 +84,7 @@ DefaultStepDisplay:
   class: tech.kzen.auto.client.objects.document.script.step.display.DefaultStepDisplay$Wrapper
 
 
+
 ConditionalStepDisplay:
   is: StepDisplay
   class: tech.kzen.auto.client.objects.document.script.step.display.control.ConditionalStepDisplay$Wrapper
@@ -99,6 +101,37 @@ MappingStepDisplay:
 #MappingItemDisplay:
 #  is: StepDisplay
 #  class: tech.kzen.auto.client.objects.document.script.step.display.control.MappingItemDisplay$Wrapper
+
+
+################################################################
+
+SequenceStepController:
+  class: tech.kzen.auto.client.objects.document.sequence.step.SequenceStepController$Wrapper
+  handle: SequenceStepControllerHandle
+  meta:
+    stepDisplays:
+      is: List
+      of: SequenceStepDisplay
+      by: Autowired
+
+
+SequenceStepControllerHandle:
+  class: tech.kzen.auto.client.objects.document.sequence.step.SequenceStepController$Handle
+
+
+SequenceStepDisplay:
+  abstract: true
+  class: tech.kzen.auto.client.objects.document.sequence.step.display.SequenceStepDisplayWrapper
+  attributeController: AttributeController
+  meta:
+    objectLocation:
+      is: ObjectLocation
+      by: Self
+
+
+SequenceStepDisplayDefault:
+  is: SequenceStepDisplay
+  class: tech.kzen.auto.client.objects.document.sequence.step.display.SequenceStepDisplayDefault$Wrapper
 
 
 ################################################################
