sequence: LogicExecution refinement, execution works

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -40,6 +40,9 @@ Sequence:
       is: List
       of: SequenceStep
       by: Nominal
+    selfLocation:
+      is: ObjectLocation
+      by: Self
 
 
 SequenceStep:
