inlined root sequence, dependency update, yarn lock file

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -36,8 +36,9 @@ Sequence:
   icon: PlaylistPlay
   steps: []
   meta:
-    root:
-      is: ObjectLocation
+    steps:
+      is: List
+      of: Action
       by: Nominal
     selfLocation:
       is: ObjectLocation
