migrate UI progress, turned off jdk auto-download

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
-kotlin.code.style=official
-kotlin.mpp.stability.nowarn=true
 org.gradle.parallel=true
 org.gradle.warning.mode=all
+org.gradle.java.installations.auto-download=false
+kotlin.code.style=official
+kotlin.mpp.stability.nowarn=true
 kotlin.js.compiler=ir
 kotlin.daemon.jvmargs=-Xmx8g
