--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-action.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-action.yaml
@@ -1,29 +1,29 @@
-
-###########################################################
-
-
-Action:
-  abstract: true
-  class: tech.kzen.auto.common.paradigm.imperative.api.ExecutionAction
-  description: "Perform action"
-  display: DefaultStepDisplay
-  meta:
-    icon: String
-    title: String
-    description: String
-    display: String
-
-
-ControlFlow:
-  abstract: true
-  is: Action
-  class: tech.kzen.auto.common.paradigm.imperative.api.ControlFlow
-  description: "Control flow"
-
-
-###########################################################
-
-
+#
+############################################################
+#
+#
+#Action:
+#  abstract: true
+#  class: tech.kzen.auto.common.paradigm.imperative.api.ExecutionAction
+#  description: "Perform action"
+#  display: DefaultStepDisplay
+#  meta:
+#    icon: String
+#    title: String
+#    description: String
+#    display: String
+#
+#
+#ControlFlow:
+#  abstract: true
+#  is: Action
+#  class: tech.kzen.auto.common.paradigm.imperative.api.ControlFlow
+#  description: "Control flow"
+#
+#
+############################################################
+#
+#
 TargetSpec:
   abstract: true
   class: tech.kzen.auto.common.objects.document.feature.TargetSpec
@@ -38,31 +38,31 @@ TargetSpecCreator:
 
 TargetSpecDefiner:
   class: tech.kzen.auto.common.objects.document.feature.TargetSpecDefiner
-
-
-###########################################################
-
-
-PrintlnAction:
-  abstract: true
-  is: Action
-  class: tech.kzen.auto.common.objects.document.script.action.PrintlnAction
-  icon: Message
-  title: "Print line"
-  message: "default message"
-  meta:
-    message: String
-
-
-ReferenceAction:
-  abstract: true
-  is: Action
-  class: tech.kzen.auto.common.objects.document.script.action.ReferenceAction
-  icon: Input
-  title: "Previous value"
-  value: ""
-  meta:
-    value:
-      is: ObjectLocation
-      by: Nominal
-      editor: SelectStepEditor
+#
+#
+############################################################
+#
+#
+#PrintlnAction:
+#  abstract: true
+#  is: Action
+#  class: tech.kzen.auto.common.objects.document.script.action.PrintlnAction
+#  icon: Message
+#  title: "Print line"
+#  message: "default message"
+#  meta:
+#    message: String
+#
+#
+#ReferenceAction:
+#  abstract: true
+#  is: Action
+#  class: tech.kzen.auto.common.objects.document.script.action.ReferenceAction
+#  icon: Input
+#  title: "Previous value"
+#  value: ""
+#  meta:
+#    value:
+#      is: ObjectLocation
+#      by: Nominal
+#      editor: SelectStepEditor
