--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 org.gradle.parallel=true
 org.gradle.warning.mode=all
+#org.gradle.java.installations.auto-download=true
 org.gradle.java.installations.auto-download=false
 kotlin.code.style=official
 kotlin.mpp.stability.nowarn=true
