old attribute editor cleanup

--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/graph-js.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/graph-js.yaml
@@ -4,7 +4,7 @@ GraphController:
   is: DocumentController
   class: tech.kzen.auto.client.objects.document.graph.GraphController$Wrapper
   archetype: Graph
-  attributeController: AttributeController
+  attributeController: AttributeEditorManagerOld
   ribbonController: RibbonController
 
 
