DataFormat add field ui

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -110,7 +110,7 @@ Feature:
 DataFormat:
   abstract: true
   is: Document
-  class: tech.kzen.auto.server.objects.data.DataDocument
+  class: tech.kzen.auto.server.objects.data.DataFormatDocument
   title: "Data Format"
   icon: MenuBook
   fields: {}
