fix SequenceTree sequencing within a branch, refactoring

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -15,7 +15,7 @@ Document:
 
 ###########################################################
 
-# TODO: factor out DocumentArchetype (concrete) vs DocumentRoot (concrete)
+# TODO: factor out DocumentArchetype (concrete) vs DocumentRoot (concrete)?
 
 #Script:
 #  abstract: true
