--- a/kzen-auto-jvm/src/test/resources/notation/test/script-tree-test.yaml
+++ b/kzen-auto-jvm/src/test/resources/notation/test/script-tree-test.yaml
@@ -1,13 +1,4 @@
-main:
-  is: Sequence
-  steps:
-    - main.steps/Formula
-    - main.steps/Mapping
-    - main.steps/Display
-
-main.steps/Formula:
-  is: FormulaStep
-  code: 1..10
+# unusual ordering for testing purposes
 
 main.steps/Mapping:
   is: MappingStep
@@ -16,14 +7,25 @@ main.steps/Mapping:
     - main.steps/Mapping.steps/Is divisible by
   items: main.steps/Formula
 
-main.steps/Mapping.steps/Item:
-  is: MappingItemStep
+main:
+  is: Sequence
+  steps:
+    - main.steps/Formula
+    - main.steps/Mapping
+    - main.steps/Display
+
+main.steps/Display:
+  is: DisplayValueStep
+  text: main.steps/Mapping
 
 main.steps/Mapping.steps/Is divisible by:
   is: DivisibleCheckStep
   number: main.steps/Mapping.steps/Item
   divisor: 2
 
-main.steps/Display:
-  is: DisplayValueStep
-  text: main.steps/Mapping
+main.steps/Formula:
+  is: FormulaStep
+  code: 1..10
+
+main.steps/Mapping.steps/Item:
+  is: MappingItemStep
