ObjectRegistryController progress, refactoring, disable run control for non-runnable documents

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -112,7 +112,7 @@ DataFormat:
   is: Document
   class: tech.kzen.auto.server.objects.data.DataFormatDocument
   title: "Data Format"
-  icon: MenuBook
+  icon: Storage
   fields: {}
   meta:
     fields: FieldFormatListSpec
